<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginUse</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Restart">Restart</string>
    <string name="RestartNote">Press button for restart LoginUse Service with new configurations.</string>
    <string name="txvEnabledGpsLocation">Enable GPS Location</string>
    <string name="txvIntervalLocation">Location Interval</string>
    <string name="edtIntervalLocationDefault">9000</string>
    <string name="txvActivityConfidence">Activity Confidence Percent</string>
    <string name="edtActivityConfidenceDefault">80</string>
    <string name="sendLogButton">Send Log</string>
    <string name="LocationTitle">Location Preferences</string>
    <string name="CurrentActivityTitle">Current Activity Preferences</string>
    <string name="SendInfoTitle">Send Information Log</string>
    <string name="txvMinDistanceLocation">Location Min Distance</string>
    <string name="edtMinDistanceLocationDefault">200</string>
    <string name="btnSaveConfiguration">Save Configuration</string>
    <string name="edtWebServiceURL">http://</string>
    <string name="txvWebServiceURL">URL WebService Upload Files</string>
    <string name="txvPhoneId">Phone Id:</string>
    <string name="txvUserName">User Name</string>
    <string name="btnRegister">Register</string>
    <string name="refreshLocationGroups">Refresh Location Groups</string>

</resources>