<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@android:color/black">

    <TableRow
        android:id="@+id/tbr1"
        android:layout_width="wrap_content"
        android:layout_height="43dp" >

        <TextView
            android:id="@+id/txvEnabledGpsLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/txvEnabledGpsLocation" />
        
        <CheckBox
            android:id="@+id/chbEnableGpsLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

    </TableRow>

    <TableRow
        android:id="@+id/tbr2"
        android:layout_width="wrap_content"
        android:layout_height="43dp" >
        
        <TextView
            android:id="@+id/txvIntervalLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/txvIntervalLocation" />
       <EditText
        	android:id="@+id/txtIntervalLocation"
        	android:layout_width="80dp"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:inputType="number" 
        	android:text="@string/edtIntervalLocationDefault">

        <requestFocus />
    </EditText>
    </TableRow>
    
    <TableRow
        android:id="@+id/tbr3"
        android:layout_width="wrap_content"
        android:layout_height="43dp" >
        
        <TextView
            android:id="@+id/txvActivityConfidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/txvActivityConfidence" />
       <EditText
        	android:id="@+id/txtActivityConfidence"
        	android:layout_width="80dp"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:inputType="number" 
        	android:text="@string/edtActivityConfidenceDefault">

        <requestFocus />
    </EditText>
    </TableRow>

    

</LinearLayout>